--- a/src/components/LinkedinPill.astro
+++ b/src/components/LinkedinPill.astro
@@ -1,10 +1,10 @@
 <div class="flex items-center">
   <span class="relative inline-flex overflow-hidden rounded-full p-[1px]">
     <span
-      class="absolute inset-[-1000%] animate-[spin_2s_linear_infinite] bg-[conic-gradient(from_90deg_at_50%_50%,#5196e4_0%,#213755_50%,#5196e4_100%)]"
+      class="absolute inset-[-1000%] animate-[spin_2s_linear_infinite] bg-[conic-gradient(from_90deg_at_50%_50%,#a78bfa_0%,#4c1d95_50%,#a78bfa_100%)]"
     ></span>
     <div
-      class="inline-flex items-center justify-center w-full px-3 py-1 text-sm text-blue-800 bg-blue-100 rounded-full cursor-pointer dark:bg-gray-800 dark:text-white/80 backdrop-blur-3xl whitespace-nowrap"
+      class="inline-flex items-center justify-center w-full px-3 py-1 text-sm text-violet-800 bg-violet-100 rounded-full cursor-pointer dark:bg-gray-800 dark:text-white/80 backdrop-blur-3xl whitespace-nowrap"
     >
       <slot />
     </div>
