--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -1,35 +1,18 @@
 ---
+import { useTranslations } from "../i18n";
+import type { Language } from "../i18n/languages";
 import ExperienceItem from "./ExperienceItem.astro";
-const EXPERIENCE = [
-  {
-    date: "Abril 2023 - Presente",
-    title: "Administrador de Sistemas",
-    company: "Universidad Tecnológica Nacional",
-    description:
-      "Como parte del equipo de Administración de Sistemas, Redes e Infraestructura, me especializo en la gestión de servidores, redes y entornos en la nube. Colaboro especialmente para garantizar la seguridad, alta disponibilidad y eficiencia de los sistemas. Contribuyo a implementar prácticas DevOps, automatizando procesos para una eficiencia operativa óptima. Mi enfoque se centra en resolver proactivamente problemas, implementar medidas de seguridad sólidas y explorar nuevas tecnologías para optimizar la infraestructura tecnológica.",
-  },
-  {
-    date: "Abril 2021 - Marzo 2023",
-    title: "Soporte IT",
-    company: "Universidad Tecnológica Nacional",
-    description:
-      "Especializado en brindar asistencia técnica, gestionar incidencias, y garantizar la continuidad operativa de sistemas y aplicaciones críticas. Experto en diagnóstico y solución de problemas de hardware, software y redes, con habilidades excepcionales de comunicación para traducir complejidades técnicas en términos comprensibles. Proactivo en la identificación de oportunidades de mejora, implementación de soluciones preventivas y optimización de procesos para maximizar la eficiencia",
-  },
-  {
-    date: "Julio 2018 - Diciembre 2018",
-    title: "Soporte IT",
-    company: "Colegio Pio IX",
-    description:
-      "Encargado de brindar asistencia técnica integral a usuarios, gestionando incidencias y garantizando la operatividad de sistemas y aplicaciones. Realicé diagnóstico y solución de problemas de hardware, software y redes. Contribuí activamente a la optimización de procesos y aprendí continuamente para ofrecer un soporte efectivo.",
-  },
-];
+
+const currentLocale = (Astro.currentLocale || 'es') as Language;
+const t = useTranslations(currentLocale);
+const EXPERIENCE = t.experience.jobs;
 ---
 
-<ol class="relative mt-16">
+<ol class="space-y-0">
   {
-    EXPERIENCE.map((experience) => (
-      <li class="">
-        <ExperienceItem {...experience} />
+    EXPERIENCE.map((experience, index) => (
+      <li>
+        <ExperienceItem {...experience} index={index} />
       </li>
     ))
   }
