--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -176,7 +176,7 @@ const htmlLang = currentLocale === 'es' ? 'es-AR' : 'en-US';
         }
       }
     </style>
-    <button id="back-to-top-btn" class="hidden">
+    <button id="back-to-top-btn" class="hidden" aria-label="Volver arriba">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         fill="none"
