--- a/src/components/SEO.astro
+++ b/src/components/SEO.astro
@@ -93,9 +93,11 @@ const schemaWebsite = {
 <meta property="og:title" content={t.seo.ogTitle} />
 <meta property="og:description" content={t.seo.ogDescription} />
 <meta property="og:image" content={fullImageUrl} />
+<meta property="og:image:secure_url" content={fullImageUrl} />
+<meta property="og:image:type" content="image/png" />
 <meta property="og:image:alt" content={`${p.name} - ${p.jobTitle}`} />
-<meta property="og:image:width" content="1200" />
-<meta property="og:image:height" content="630" />
+<meta property="og:image:width" content="512" />
+<meta property="og:image:height" content="512" />
 <meta property="og:locale" content={currentLocale === 'es' ? 'es_AR' : 'en_US'} />
 <meta property="og:locale:alternate" content={currentLocale === 'es' ? 'en_US' : 'es_AR'} />
 <meta property="og:site_name" content={`${p.name} Portfolio`} />
